--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "New York Times API",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "build": "parcel build --public-url . index.html"
   },
   "author": "",
   "license": "ISC",
